--- a/hw3/.vscode/tasks.json
+++ b/hw3/.vscode/tasks.json
@@ -1,15 +1,27 @@
 {
     "tasks": [
         {
-            "type": "cmake",
-            "label": "build",
-            "command": "build",
-            "targets": [
-                "all"
+            "type": "cppbuild",
+            "label": "C/C++: g++ 生成活动文件",
+            "command": "/usr/bin/g++",
+            "args": [
+                "-fdiagnostics-color=always",
+                "-g",
+                "${file}",
+                "-o",
+                "${fileDirname}/${fileBasenameNoExtension}"
             ],
-            "group": "build",
-            "problemMatcher": [],
-            "detail": "CMake template build task"
+            "options": {
+                "cwd": "${fileDirname}"
+            },
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "detail": "调试器生成的任务。"
         }
     ],
     "version": "2.0.0"
