finish hw4_1 and hw4_2

--- a/hw4/CMakeLists.txt
+++ b/hw4/CMakeLists.txt
@@ -4,8 +4,4 @@ project(hw4_2)
 
 add_executable(hw4_2 hw4_2.cpp)
 
-
-add_subdirectory(deps/cppjieba)
-add_subdirectory(deps/limonp)
-
-target_link_libraries(hw4_2 PRIVATE cppjieba limonp)
+include_directories(hw4_2 include)
