--- a/final/CMakeLists.txt
+++ b/final/CMakeLists.txt
@@ -5,7 +5,7 @@ add_executable(main main.cpp)
 
 set (CMAKE_CXX_STANDARD 20)
 
-include_directories(main include)
+include_directories(include)
 
 find_library(LIBSTEMMER NAMES libstemmer.so)
 
